--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
 
 <div id="uiButton">
     <button id="screenshot" type="button">Save...</button>
+    <button onclick="window.location.href='https://github.com/mdhender/lutymaps';">
+        <img src="img/github-mark.png" alt="Github" width="18" height="18"/>
+    </button>
 </div>
 
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
