--- a/public/webgl_layers.html
+++ b/public/webgl_layers.html
@@ -34,6 +34,7 @@
 				}
 			}
 
+
 </script>
 
 <script type="module">
@@ -48,6 +49,10 @@
 
 	let theta = 0;
 	const radius = 100;
+
+	// function getRandomInt() {
+	// 	return Math.floor(Math.random() * systems.length);
+	// }
 
 	init();
 	animate();
@@ -85,6 +90,11 @@
 			object.position.x = Math.random() * 800 - 400;
 			object.position.y = Math.random() * 800 - 400;
 			object.position.z = Math.random() * 800 - 400;
+
+					// const system = systems[getRandomInt()];
+					// object.position.x = 800 * (system.x + 25) / 51 - 400;
+					// object.position.y = 800 * (system.y + 25) / 51 - 400;
+					// object.position.z = 800 * (system.z + 25) / 51 - 400;
 
 			object.rotation.x = Math.random() * 2 * Math.PI;
 			object.rotation.y = Math.random() * 2 * Math.PI;
