--- a/public/sphere-demo.html
+++ b/public/sphere-demo.html
@@ -29,7 +29,6 @@
 <body>
 <!-- canvas id="c" width="1280" height="640"></canvas -->
 <div id="uiButton">
-    <button id="pause" type="button">Pause</button>
     <button id="screenshot" type="button">Save...</button>
     <button onclick="window.location.href='https://github.com/mdhender/lutymaps';">
         <img src="img/github-mark.png" alt="Github" width="18" height="18"/>
@@ -46,7 +45,6 @@
     "three/addons/": "https://unpkg.com/three@0.147.0/examples/jsm/"
   }
 }
-
 </script>
 
 <script type="module">
@@ -55,26 +53,25 @@
 	import {OrbitControls} from 'three/addons/controls/OrbitControls.js';
 
 	let container, controls, camera, scene, renderer;
-	let paused = false;
 	let theta = 0;
 	const radius = 1280;
 
-    // from https://karthikkaranth.me/blog/generating-random-points-in-a-sphere/
-    function getPoint() {
-        const u = Math.random();
-        const v = Math.random();
-        const theta = u * 2.0 * Math.PI;
-        const phi = Math.acos(2.0 * v - 1.0);
-        const r = Math.cbrt(Math.random());
-        const sinTheta = Math.sin(theta);
-        const cosTheta = Math.cos(theta);
-        const sinPhi = Math.sin(phi);
-        const cosPhi = Math.cos(phi);
-        const x = r * sinPhi * cosTheta;
-        const y = r * sinPhi * sinTheta;
-        const z = r * cosPhi;
-        return {x: x, y: y, z: z};
-    }
+	// from https://karthikkaranth.me/blog/generating-random-points-in-a-sphere/
+	function getPoint() {
+		const u = Math.random();
+		const v = Math.random();
+		const theta = u * 2.0 * Math.PI;
+		const phi = Math.acos(2.0 * v - 1.0);
+		const r = Math.cbrt(Math.random());
+		const sinTheta = Math.sin(theta);
+		const cosTheta = Math.cos(theta);
+		const sinPhi = Math.sin(phi);
+		const cosPhi = Math.cos(phi);
+		const x = r * sinPhi * cosTheta;
+		const y = r * sinPhi * sinTheta;
+		const z = r * cosPhi;
+		return {x: x, y: y, z: z};
+	}
 
 	function onWindowResize() {
 		camera.aspect = window.innerWidth / window.innerHeight;
@@ -126,7 +123,7 @@
 
 			const sphere = new THREE.Mesh(geometry, material);
 			const p = getPoint();
-			sphere.position.set(p.x*radius, p.y*radius, p.z*radius);
+			sphere.position.set(p.x * radius, p.y * radius, p.z * radius);
 			sphere.layers.set(layer);
 
 			scene.add(sphere);
@@ -171,30 +168,16 @@
 	}
 
 	function render() {
-		theta += 0.1;
-		camera.position.x = radius * Math.cos(THREE.MathUtils.degToRad(theta));
-		camera.position.y = radius * Math.sin(THREE.MathUtils.degToRad(theta));
-		camera.position.z = 300; //radius  * Math.cos(THREE.MathUtils.degToRad(theta));
-		camera.lookAt(scene.position);
-		//console.log(scene.position, camera.position);
+		// required if controls.enableDamping or controls.autoRotate are set to true
+		controls.update();
+
 		renderer.render(scene, camera);
 	}
 
 	function animate() {
 		requestAnimationFrame(animate);
-
-		// required if controls.enableDamping or controls.autoRotate are set to true
-		controls.update();
-		// if (!paused) {
-		// 	render();
-		// }
-		renderer.render(scene, camera);
+		render();
 	}
-
-	const bPause = document.querySelector('#pause');
-	bPause.addEventListener('click', () => {
-		paused = !paused;
-	});
 
 	const bSave = document.querySelector('#screenshot');
 	bSave.addEventListener('click', () => {
