added meshes for stars and dust clouds

--- a/public/sphere-demo.html
+++ b/public/sphere-demo.html
@@ -46,6 +46,7 @@
   }
 }
 
+
 </script>
 
 <script type="module">
@@ -57,9 +58,14 @@
 	let theta = 0;
 	const radius = 1280;
 
-    const mushterial = new THREE.MeshBasicMaterial({map: new THREE.TextureLoader().load('https://wraith.dev/luty/img/EW7s2zy.jpeg')});
+	const mushterial = new THREE.MeshBasicMaterial({map: new THREE.TextureLoader().load('https://wraith.dev/luty/img/EW7s2zy.jpeg')});
+	const dustCloudLightMaterial = new THREE.MeshBasicMaterial({map: new THREE.TextureLoader().load('https://wraith.dev/luty/img/dust_cloud_light.jpg')});
+	const dustCloudMediumMaterial = new THREE.MeshBasicMaterial({map: new THREE.TextureLoader().load('https://wraith.dev/luty/img/dust_cloud_medium.jpg')});
+	const dustCloudDenseMaterial = new THREE.MeshBasicMaterial({map: new THREE.TextureLoader().load('https://wraith.dev/luty/img/dust_cloud_dense.jpg')});
+    const blueStarMaterial = new THREE.MeshBasicMaterial({color: 0x0000ff});
+    const yellowStarMaterial = new THREE.MeshBasicMaterial({color: 0xffff00});
 
-    // from https://karthikkaranth.me/blog/generating-random-points-in-a-sphere/
+	// from https://karthikkaranth.me/blog/generating-random-points-in-a-sphere/
 	function getPoint() {
 		const u = Math.random();
 		const v = Math.random();
@@ -99,6 +105,8 @@
 		camera.layers.enable(0); // enabled by default
 		camera.layers.enable(1);
 		camera.layers.enable(2);
+        camera.layers.enable(3);
+        camera.layers.enable(4);
 
 		const lightColor = 0xffffff;
 		const lightIntensity = 1;
@@ -113,24 +121,33 @@
 		scene.add(camera);
 
 		const colors = [0xff0000, 0x00ff00, 0x0000ff];
-		const sradius = 3;
+		const sradius = 12;
 		const widthSegments = 32;
 		const heightSegments = 16;
 		scene.add(new THREE.Mesh(new THREE.SphereGeometry(sradius, widthSegments, heightSegments), new THREE.MeshBasicMaterial({color: 0x000000})));
 
 		for (let i = 0; i < 10000; i++) {
-			const layer = (i % 3);
+			const layer = (i % 5);
 			const geometry = new THREE.SphereGeometry(sradius, widthSegments, heightSegments);
 			let material;
-			switch (i % 3) {
+			switch (layer) {
 				case 0:
-                    material = new THREE.MeshLambertMaterial({color: colors[layer]});
+					material = dustCloudLightMaterial;
 					break;
 				case 1:
-                    material = new THREE.MeshLambertMaterial({color: colors[layer]});
+					material = dustCloudMediumMaterial;
 					break;
 				case 2:
-					material = mushterial;
+					material = dustCloudDenseMaterial;
+					break;
+                case 3:
+                    material = blueStarMaterial;
+                    break;
+                case 4:
+                    material = yellowStarMaterial;
+                    break;
+				default:
+					material = new THREE.MeshLambertMaterial({color: colors[layer]});
 					break;
 			}
 
@@ -164,6 +181,12 @@
 			'toggle dense dust clouds': function () {
 				camera.layers.toggle(2);
 			},
+            'toggle blue stars': function () {
+                camera.layers.toggle(3);
+            },
+            'toggle yellow stars': function () {
+                camera.layers.toggle(4);
+            },
 			'enable all': function () {
 				camera.layers.enableAll();
 			},
@@ -174,6 +197,8 @@
 		gui.add(layers, 'toggle light dust clouds');
 		gui.add(layers, 'toggle medium dust clouds');
 		gui.add(layers, 'toggle dense dust clouds');
+        gui.add(layers, 'toggle blue stars');
+        gui.add(layers, 'toggle yellow stars');
 		gui.add(layers, 'enable all');
 		gui.add(layers, 'disable all');
 
