removed hard-coded host name

--- a/public/sphere-demo.html
+++ b/public/sphere-demo.html
@@ -58,10 +58,10 @@
 	let theta = 0;
 	const radius = 1280;
 
-	const mushterial = new THREE.MeshBasicMaterial({map: new THREE.TextureLoader().load('https://wraith.dev/luty/img/EW7s2zy.jpeg')});
-	const dustCloudLightMaterial = new THREE.MeshBasicMaterial({map: new THREE.TextureLoader().load('https://wraith.dev/luty/img/dust_cloud_light.jpg')});
-	const dustCloudMediumMaterial = new THREE.MeshBasicMaterial({map: new THREE.TextureLoader().load('https://wraith.dev/luty/img/dust_cloud_medium.jpg')});
-	const dustCloudDenseMaterial = new THREE.MeshBasicMaterial({map: new THREE.TextureLoader().load('https://wraith.dev/luty/img/dust_cloud_dense.jpg')});
+	const mushterial = new THREE.MeshBasicMaterial({map: new THREE.TextureLoader().load('img/EW7s2zy.jpeg')});
+	const dustCloudLightMaterial = new THREE.MeshBasicMaterial({map: new THREE.TextureLoader().load('img/dust_cloud_light.jpg')});
+	const dustCloudMediumMaterial = new THREE.MeshBasicMaterial({map: new THREE.TextureLoader().load('img/dust_cloud_medium.jpg')});
+	const dustCloudDenseMaterial = new THREE.MeshBasicMaterial({map: new THREE.TextureLoader().load('img/dust_cloud_dense.jpg')});
     const blueStarMaterial = new THREE.MeshBasicMaterial({color: 0x0000ff});
     const yellowStarMaterial = new THREE.MeshBasicMaterial({color: 0xffff00});
 
