--- a/public/sphere-demo.html
+++ b/public/sphere-demo.html
@@ -27,13 +27,7 @@
     </style>
 </head>
 <body>
-<!-- canvas id="c" width="1280" height="640"></canvas -->
-<div id="uiButton">
-    <button id="screenshot" type="button">Save...</button>
-    <button onclick="window.location.href='https://github.com/mdhender/lutymaps';">
-        <img src="img/github-mark.png" alt="Github" width="18" height="18"/>
-    </button>
-</div>
+<!-- canvas is created by the init routine -->
 
 <!-- Import maps polyfill -->
 <!-- Remove this when import maps will be widely supported -->
@@ -180,6 +174,9 @@
 		// Init gui
 		const gui = new GUI();
 		const layers = {
+			'save': function () {
+				saveCanvas();
+			},
 			'toggle light dust clouds': function () {
 				camera.layers.toggle(0);
 			},
@@ -202,6 +199,7 @@
 				camera.layers.disableAll();
 			}
 		};
+		gui.add(layers, 'save');
 		gui.add(layers, 'toggle light dust clouds');
 		gui.add(layers, 'toggle medium dust clouds');
 		gui.add(layers, 'toggle dense dust clouds');
@@ -229,15 +227,6 @@
 		render();
 	}
 
-	const bSave = document.querySelector('#screenshot');
-	bSave.addEventListener('click', () => {
-		render();
-		const canvas = renderer.domElement;
-		canvas.toBlob((blob) => {
-			saveBlob(blob, `screencapture-${canvas.width}x${canvas.height}.png`);
-		});
-	});
-
 	const saveBlob = (function () {
 		const a = document.createElement('a');
 		document.body.appendChild(a);
@@ -248,6 +237,14 @@
 			a.click();
 		};
 	}());
+
+	function saveCanvas() {
+		render();
+		const canvas = renderer.domElement;
+		canvas.toBlob((blob) => {
+			saveBlob(blob, `screencapture-${canvas.width}x${canvas.height}.png`);
+		});
+	}
 
 	init();
 	animate();
