--- a/public/sphere-demo.html
+++ b/public/sphere-demo.html
@@ -112,14 +112,15 @@
 	const originMaterial = new THREE.MeshBasicMaterial({map: new THREE.TextureLoader().load('img/origin.jpg')});
 	const originMesh = new THREE.Mesh(originGeometry, originMaterial);
 
-	const dustCloudGeometry = new THREE.SphereGeometry(sradius, widthSegments, heightSegments);
+	const dustCloudGeometry = new THREE.BoxGeometry(2 * sradius, 2 * sradius, 2 * sradius);
 	const dustCloudLightMaterial = new THREE.MeshBasicMaterial({map: new THREE.TextureLoader().load('img/dust_cloud_light.jpg')});
 	const dustCloudMediumMaterial = new THREE.MeshBasicMaterial({map: new THREE.TextureLoader().load('img/dust_cloud_medium.jpg')});
 	const dustCloudDenseMaterial = new THREE.MeshBasicMaterial({map: new THREE.TextureLoader().load('img/dust_cloud_dense.jpg')});
+	const dustClouds = [];
 
-	const starGeometry = new THREE.SphereGeometry(sradius, widthSegments, heightSegments);
-	const starBlueMaterial = new THREE.MeshBasicMaterial({color: 0x0000ff});
-	const starYellowMaterial = new THREE.MeshBasicMaterial({color: 0xffff00});
+	const starGeometry = new THREE.SphereGeometry(2*sradius, widthSegments, heightSegments);
+	const starBlueMaterial = new THREE.MeshLambertMaterial({color: 0x00aaff});
+	const starYellowMaterial = new THREE.MeshLambertMaterial({color: 0xffff00});
 
 	function onWindowResize() {
 		camera.aspect = window.innerWidth / window.innerHeight;
@@ -162,42 +163,53 @@
 		scene.add(new THREE.Mesh(cubeGeometry, cubeMaterial));
 
 		for (let i = 0; i < sector.systems.length; i++) {
-			const geometry = new THREE.SphereGeometry(sradius, widthSegments, heightSegments);
-			let material;
-			let layer;
+			let geometry, material, layer;
+			let isDustCloud = false;
 			const system = sector.systems[i];
 			switch (system.kind) {
 				case "Light Dust Cloud":
-					layer = 1;
+					geometry = dustCloudGeometry;
 					material = dustCloudLightMaterial;
+					layer = 1;
+					isDustCloud = true;
 					break;
 				case "Medium Dust Cloud":
-					layer = 2;
+					geometry = dustCloudGeometry;
 					material = dustCloudMediumMaterial;
+					layer = 2;
+					isDustCloud = true;
 					break;
 				case "Dense Dust Cloud":
-					layer = 3;
+					geometry = dustCloudGeometry;
 					material = dustCloudDenseMaterial;
+					layer = 3;
+					isDustCloud = true;
 					break;
 				case "Blue Super Giant":
-					layer = 4;
+					geometry = starGeometry;
 					material = starBlueMaterial;
+					layer = 4;
 					break;
 				case "Yellow Main Sequence":
-					layer = 5;
+					geometry = starGeometry;
 					material = starYellowMaterial;
+					layer = 5;
 					break;
 				default:
-					layer = 0;
+					geometry = dustCloudGeometry;
 					material = new THREE.MeshLambertMaterial({color: 0x442288});
+					layer = 0;
 					break;
 			}
 
-			const sphere = new THREE.Mesh(geometry, material);
-			sphere.position.set(system.x * scaler, system.y * scaler, system.z * scaler);
-			sphere.layers.set(layer);
+			const mesh = new THREE.Mesh(geometry, material);
+			mesh.position.set(system.x * scaler, system.y * scaler, system.z * scaler);
+			mesh.layers.set(layer);
+			scene.add(mesh);
 
-			scene.add(sphere);
+			if (isDustCloud) {
+				dustClouds.push(mesh);
+			}
 		}
 
 		renderer = new THREE.WebGLRenderer();
@@ -253,21 +265,32 @@
 	}
 
 	function render() {
-		// required if controls.enableDamping or controls.autoRotate are set to true
-		controls.update();
-		// not sure if we should always update this
-		stats.update();
-
 		renderer.render(scene, camera);
 	}
 
-	function animate() {
-		requestAnimationFrame(animate);
-		theta += 0.01;
-		originMesh.rotation.x = 2 * Math.cos(theta);
-		originMesh.rotation.y = 2 * Math.sin(theta);
-		originMesh.rotation.z = Math.cos(theta);
+	function animate(time) {
+		time *= 0.001;  // convert time to seconds
+
+		// not sure if we should always update this
+		stats.update();
+
+		// required if controls.enableDamping or controls.autoRotate are set to true
+		controls.update();
+
+		originMesh.rotation.x = 2 * Math.cos(time);
+		originMesh.rotation.y = 2 * Math.sin(time);
+		originMesh.rotation.z = Math.cos(time);
+
+		dustClouds.forEach((cloud, ndx) => {
+			const speed = 1 + ndx * .1;
+			const rot = time * speed;
+			cloud.rotation.x = rot;
+			cloud.rotation.y = rot;
+		});
+
 		render();
+
+		requestAnimationFrame(animate);
 	}
 
 	const saveBlob = (function () {
